<resources>
    <string name="app_name">Dialogue Boxes</string>
    <string name="basic_alert">Basic Alert</string>
    <string name="with_icon_and_customization">WITH ICON AND CUSTOMIZATION</string>
    <string name="with_items">WITH ITEMS</string>
    <string name="with_multi_choice_list">WITH MULTI CHOICE LIST</string>
    <string name="with_style">with Style</string>
    <string name="with_custom_style">With Custom Style</string>
    <string name="with_button_center">with button center</string>
    <string name="enter_the_text_here">Enter the text here</string>
    <string name="type_1">Type 1</string>
    <string name="qiz_of_technology">Qiz of Technology</string>
    <string name="which_is_your_faveratue_language">which is your favourite language ?</string>
    <string name="quetion_1">Quetion 1</string>
    <string name="exit">Exit</string>
    <string name="question_2">Question 2</string>
    <string name="todo">ToDo</string>
    <string name="how_is_the_android_app_dev_journey_going">how is the android app Dev Journey Going?</string>
    <string name="congratulations_for_showing_up_today">congratulations For showing up today!</string>
    <string name="send_feedback">Send FeedBack</string>
    <string name="custumize_alert_box">custumize Alert Box</string>


</resources>